# GBImg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: CodeExporter.hpp  ColorManip.hpp  ColorPalette.hpp  Colors.hpp  Image.hpp  ImageProgram.hpp  MetaImg.hpp  Options.hpp
Source/: CodeExporter.cpp  ColorManip.cpp  Colors.cpp  Image.cpp  ImageProgram.cpp  MetaImg.cpp  Options.cpp  main.cpp
